<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/brunch"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hui.class3_order.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableNumber"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightGreen"
            android:textSize="@dimen/BigString"
            android:id="@+id/editText" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:layout_marginRight="30dp"
            android:id="@+id/radioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vip"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:id="@+id/radioButton2"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textSize="@dimen/BigString"
        android:textColor="@color/lightGreen"
        android:id="@+id/textView4" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/A_meal"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:layout_marginRight="30dp"
            android:id="@+id/checkBox"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B_meal"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:id="@+id/checkBox2"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/C_meal"
            android:textSize="@dimen/BigString"
            android:layout_marginRight="30dp"
            android:textColor="@color/lightGreen"
            android:id="@+id/checkBox3"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/D_meal"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:id="@+id/checkBox4"
            android:checked="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Beverage"
        android:textSize="@dimen/BigString"
        android:textColor="@color/lightGreen"
        android:id="@+id/textView2" />

    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:layout_marginRight="30dp"
            android:id="@+id/radioButton3"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackTea"
            android:textSize="@dimen/BigString"
            android:textColor="@color/lightGreen"
            android:id="@+id/radioButton4"
            android:checked="false" />
    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pay"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/BigString"
        android:textColor="@color/blue"
        android:id="@+id/textView" />

</LinearLayout>
